Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 Committer: Nascimento <vitor.c.nascimento@accenture.com>

 On branch master
 Your branch is ahead of 'origin/master' by 1 commit.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   .gitignore
	modified:   src/main/java/com/br/vitornascimento/controller/MathController.java

 Untracked files:
	src/main/java/com/br/vitornascimento/OperationValidator.java
	src/main/java/com/br/vitornascimento/Operations.java
	src/main/java/com/br/vitornascimento/exception/

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 /target/
+
+# Change extension of this file to .gitignore
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+#Eclipse files
+**/.project
+**/.classpath
+**/.settings/
+blog/bin/
+**/.tern-project
